--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/wallpaper"
@@ -85,6 +85,8 @@
         android:visibility="gone"
         android:clickable="true"
         android:focusable="true"></View>
+
+
 <LinearLayout
     android:id="@+id/macro_bar"
     android:layout_width="180dp"
@@ -232,7 +234,8 @@
         patternview:gridRows="3"
         patternview:gridColumns="3"/>
 
-    <ImageButton
+
+    <Button
         android:id="@+id/apps_button"
         android:layout_width="52dp"
         android:layout_height="52dp"
@@ -240,17 +243,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="6dp"
-        android:layout_marginStart="6dp"/>
+        android:layout_marginStart="6dp"
+        android:text=">"
+        android:textAlignment="center"
+        android:gravity="center"/>
 
-    <!--<ImageButton-->
-        <!--android:id="@+id/notes_button"-->
-        <!--android:layout_width="52dp"-->
-        <!--android:layout_height="52dp"-->
-        <!--android:background="@drawable/home_icon"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginTop="6dp"-->
-        <!--android:layout_marginEnd="6dp"-->
-        <!--android:rotation="180"/>-->
+    <com.rtugeek.android.colorseekbar.ColorSeekBar
+        android:id="@+id/colorSlider"
+        android:layout_width="180dp"
+        app:colorSeeds="@array/material_colors"
+        android:layout_height="40dp"
+        android:layout_toStartOf="@id/macro_bar"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="6dp"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
