--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/main_view">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/wallpaper"
@@ -10,6 +10,21 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
+        />
+
+    <ImageView
+        android:id="@+id/top_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/gradient_top"
+        />
+    <ImageView
+        android:id="@+id/bottom_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/gradient_bottom"
         />
 
     <FrameLayout
