--- a/app/src/main/res/layout/fragment_launch_left.xml
+++ b/app/src/main/res/layout/fragment_launch_left.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/apps_list"
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_left"
+            android:layout_gravity="start"
+            android:fillViewport="true"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp" />
+
+    </android.support.v4.widget.DrawerLayout>
+
+</RelativeLayout>
