--- a/app/src/main/res/layout/item_appslist_left.xml
+++ b/app/src/main/res/layout/item_appslist_left.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="60dp"
-    android:layout_marginStart="5dp">
+    android:layout_marginEnd="6dp">
 
 
     <include layout="@layout/item_applist_macro"
@@ -13,14 +13,14 @@
         android:layout_marginEnd="6dp"/>
 
     <TextView android:id="@+id/text"
-        android:layout_gravity="end|center_vertical"
+        android:layout_gravity="start|center_vertical"
         android:layout_width="70dp"
         android:maxLines="3"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:textAlignment="textEnd"
+        android:textAlignment="textStart"
         android:layout_marginEnd="6dp"
         />
 
