--- a/app/src/main/res/drawable/circle_gray.xml
+++ b/app/src/main/res/drawable/circle_gray.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <solid android:color="#f2f2f2"/>
+            <solid android:color="#888888"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="#f2f2f2"/>
+            <solid android:color="#888888"/>
         </shape>
     </item>
 </selector>
