--- a/app/src/main/res/layout/fragment_appslist.xml
+++ b/app/src/main/res/layout/fragment_appslist.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/apps_recycler_view"
+    <ListView
+        android:id="@+id/apps_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
-        android:overScrollMode="never"/>
+        android:overScrollMode="never"
+        android:divider="@color/clear"/>
 
 </RelativeLayout>
