--- a/app/src/main/res/layout/fragment_launch_left.xml
+++ b/app/src/main/res/layout/fragment_launch_left.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#88000000"
-        android:visibility="visible"
+        android:visibility="gone"
         android:clickable="true"
         android:focusable="true"/>
 
