--- a/app/src/main/res/drawable/dot.xml
+++ b/app/src/main/res/drawable/dot.xml
@@ -4,10 +4,9 @@
     android:shape="oval">
 
     <solid
-        android:color="#000000"/>
+        android:color="#55ffffff"/>
 
     <size
         android:width="5dp"
         android:height="5dp"/>
-    <stroke android:width="2px" android:color="#ffffff"/>
 </shape>
