--- a/app/src/main/res/drawable/dot_gray.xml
+++ b/app/src/main/res/drawable/dot_gray.xml
@@ -9,4 +9,5 @@
     <size
         android:width="5dp"
         android:height="5dp"/>
+    <stroke android:width="2px" android:color="#ffffff"/>
 </shape>
