--- a/app/src/main/res/layout/item_applist_macro.xml
+++ b/app/src/main/res/layout/item_applist_macro.xml
@@ -16,9 +16,8 @@
                 android:id="@+id/macro_1"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -28,9 +27,8 @@
                 android:id="@+id/macro_2"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -40,9 +38,8 @@
                 android:id="@+id/macro_3"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
     </LinearLayout>
@@ -59,9 +56,8 @@
                 android:id="@+id/macro_4"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -71,9 +67,8 @@
                 android:id="@+id/macro_5"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -83,9 +78,8 @@
                 android:id="@+id/macro_6"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
     </LinearLayout>
@@ -102,9 +96,8 @@
                 android:id="@+id/macro_7"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -114,9 +107,8 @@
                 android:id="@+id/macro_8"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -126,9 +118,8 @@
                 android:id="@+id/macro_9"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
-                android:background="@drawable/dot_white"
+                android:background="@drawable/dot"
                 android:layout_centerInParent="true"
-                android:alpha="0.5"
                 />
         </RelativeLayout>
     </LinearLayout>
