Fixed bug with updated macros not displaying properly, added swipe to refresh on app list

--- a/app/src/main/res/layout/fragment_appslist.xml
+++ b/app/src/main/res/layout/fragment_appslist.xml
@@ -3,12 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/apps_list_view"
+    <FrameLayout
+        android:id="@+id/progress_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never"
-        android:divider="@color/clear"/>
+        android:layout_height="match_parent"/>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/apps_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:overScrollMode="never"
+            android:divider="@color/clear"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
