--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,15 @@
         android:layout_width="match_parent"
         android:layout_height="6dp"
         android:layout_alignParentTop="true"
-        android:background="@drawable/gradient_top"
+        android:background="@drawable/linear_gradient"
         />
     <ImageView
         android:id="@+id/bottom_gradient"
         android:layout_width="match_parent"
         android:layout_height="6dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/gradient_bottom"
+        android:background="@drawable/linear_gradient"
+        android:rotation="180"
         />
 
     <FrameLayout
