--- a/app/src/main/res/layout/item_appslist.xml
+++ b/app/src/main/res/layout/item_appslist.xml
@@ -1,32 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="80dp"
+    android:background="#dd000000">
 
 
     <ImageView android:id="@+id/icon"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="match_parent"
         android:layout_margin="6dp"
-        android:layout_weight="1"/>
+        android:layout_alignParentStart="true"
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView android:id="@+id/text"
         android:layout_width="wrap_content"
-        android:maxLines="3"
         android:layout_height="wrap_content"
+        android:maxLines="3"
         android:ellipsize="end"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="18sp"
+        android:text="MacroHome Lite Launcher"
         android:textAlignment="center"
-        android:layout_weight="2"
-        android:layout_gravity="center_vertical"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="86dp"
+        android:layout_marginEnd="86dp"
         />
 
-    <ImageView android:id="@+id/macro"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/macro_layout"
+        android:layout_width="80dp"
         android:layout_height="match_parent"
-        android:layout_margin="6dp"
-        android:layout_weight="1"/>
+        android:layout_alignParentEnd="true">
+        <LinearLayout
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:orientation="vertical"
+            android:padding="3dp"
+            android:layout_centerInParent="true">
 
-</LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <View
+                    android:id="@+id/macro_1"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+                <View
+                    android:id="@+id/macro_2"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+                <View
+                    android:id="@+id/macro_3"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <View
+                    android:id="@+id/macro_4"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+                <View
+                    android:id="@+id/macro_5"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+                <View
+                    android:id="@+id/macro_6"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <View
+                    android:id="@+id/macro_7"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+                <View
+                    android:id="@+id/macro_8"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+                <View
+                    android:id="@+id/macro_9"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="#444"
+                    android:layout_margin="3dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
