--- a/app/src/main/res/layout/item_appslist.xml
+++ b/app/src/main/res/layout/item_appslist.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="#dd000000">
+    android:background="#ffffff">
 
 
     <ImageView android:id="@+id/icon"
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:maxLines="3"
         android:ellipsize="end"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:text="MacroHome Lite Launcher"
         android:textAlignment="center"
@@ -30,7 +30,8 @@
         android:id="@+id/macro_layout"
         android:layout_width="80dp"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:background="@color/colorPrimary">
         <LinearLayout
             android:layout_width="60dp"
             android:layout_height="60dp"
