--- a/app/src/main/res/layout/fragment_launch.xml
+++ b/app/src/main/res/layout/fragment_launch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:myapp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,6 +20,12 @@
         android:clickable="true"
         android:focusable="true"/>
 
-
+    <com.dustinbayer.macrohomelauncher.MacroLayout
+        android:id="@+id/macro_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        myapp:canToggleKeys="false"
+        myapp:timeVisibleInMil="1000"
+        android:visibility="gone"/>
 
 </RelativeLayout>
